--- a/2022/build.gradle
+++ b/2022/build.gradle
@@ -21,13 +21,13 @@ dependencies {
   // Use JUnit Jupiter for testing.
   testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
-  // This dependency is used by the application.
+  implementation 'ch.qos.logback:logback-classic:1.4.1'
+  implementation 'com.google.code.gson:gson:2.8.9'
   implementation 'com.google.guava:guava:30.1.1-jre'
   implementation 'info.picocli:picocli:4.7.0'
-  implementation 'ch.qos.logback:logback-classic:1.4.1'
+  implementation 'org.apache.commons:commons-lang3:3.12.0'
 
   annotationProcessor 'info.picocli:picocli-codegen:4.7.0'
-
 
   compileOnly 'org.projectlombok:lombok:1.18.24'
   annotationProcessor 'org.projectlombok:lombok:1.18.24'
