--- a/2022/build.gradle
+++ b/2022/build.gradle
@@ -26,6 +26,7 @@ dependencies {
   implementation 'com.google.guava:guava:30.1.1-jre'
   implementation 'info.picocli:picocli:4.7.0'
   implementation 'org.apache.commons:commons-lang3:3.12.0'
+  implementation 'org.jooq:jool:0.9.14'
 
   annotationProcessor 'info.picocli:picocli-codegen:4.7.0'
 
